# ALIIOS_CLI

./: .gitignore  CMakeLists.txt  README.md
ALIIOS/: ALIIOS.py  CMakeLists.txt
ALIIOS/Resources/UI/: ALIIOS.ui
ALIIOS_CLI/: ALIIOS_CLI.py  ALIIOS_CLI.xml  CMakeLists.txt
